# pizzplay

./: LICENSE  README.md
client/: admin.html  index.html  package-lock.json  package.json  vite.config.ts
client/src/: admin.module.css  admin.tsx  display.module.css  display.tsx  eventlistener.ts  index.css  utils.tsx
server/: Cargo.toml  build.rs
server/src/: args.rs  client.rs  events.rs  images.rs  main.rs  orders.rs  popups.rs
